Trying to fix wrong path

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -23,7 +23,7 @@ jobs:
           npm install
       - name: Build application
         run: |
-          npm run build --base /${{ github.event.repository.name }}/
+          npm run build --base /
           cp dist/index.html dist/404.html
       - name: Deploy pages
         uses: crazy-max/ghaction-github-pages@v2.3.0
