--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -26,7 +26,7 @@ jobs:
           npm install
       - name: Build application
         run: |
-          npm run build --base .
+          npm run build
           cp dist/index.html dist/404.html
       - name: Deploy pages
         uses: crazy-max/ghaction-github-pages@v2.3.0
